# DNA2Diet

./: .gitignore  .render-build.sh  IMPROVEMENTS.md  IngredientExtraction  Pipfile  README.md  SETUP_COMPLETE.md  add_progress_columns.sql  app.py  check_analysis.py  disease.json  diseaseEstimation.py  disease_candidates.csv  disease_final.py  disease_publications.json  disease_snp_details.csv  dummy.txt  food_data.json  ingredient_recommendations.csv  ingredient_recommendations.json  mesh.py  nutritional_snps_final.csv  per_disease_food_advice.json  prevalanceValFinder.py  prevalences.json  prevalences_report.csv  pyproject.toml  pyth.py  recipe_extraction.py  recipe_recommendations.csv  recipes_by_ingredient.json  requirements-old.txt  requirements.txt  run.bat  run.py  run.sh  selected_diseases.csv  selected_diseases.json  selected_diseases_ranked.csv  selected_diseases_ranked.json  (+7 more)
database/: schema.sql
disease_details/: migraine_disorder.json  stroke.json
processing/: __init__.py  disease_estimator.py  disease_finalizer.py  genome_processor.py  ingredient_extractor.py  mesh_processor.py  recipe_fetcher.py  recipe_processor.py
recipe_details/: aralia_cordata.json  celery.json  cheese.json  cocoa.json  coffee.json  gastrodia_elata.json  ginkgo_biloba.json  ginseng.json  peppermint.json  pork.json  rhubarb.json  scutellaria_baicalensis.json  tanacetum_parthenium.json  verbascum_thapsus_l_.json  white_wine.json
templates/: base.html  dashboard.html  login.html  profile.html  recipe_detail.html  recipes.html  register.html  results.html  upload.html
(+1 files in other folders)
